syntax = "proto3";

option go_package = "github.com/go-leo/status/example/helloworld;helloworld";

package helloworld;

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest { string name = 1; }

message HelloReply { string message = 1; }
