syntax = "proto3";
package leo.example.status.errors;
option go_package = "github.com/go-leo/status/example/api/status/v1;status";

import "leo/status/annotations.proto";

enum Errors {
  option (leo.status.default_rpc_status) = INTERNAL;
  option (leo.status.default_http_status) = 500;

  Default = 0;

  JustRpcStatus = 1 [ (leo.status.rpc_status) = INVALID_ARGUMENT ];

  JustHttpStatus = 2 [ (leo.status.http_status) = 400 ];

  JustMessage = 3 [ (leo.status.message) = "just message" ];

  AllHave = 4 [
    (leo.status.rpc_status) = INVALID_ARGUMENT,
    (leo.status.http_status) = 401,
    (leo.status.message) = "all have"
  ];
}